# CN332-project

./: .gitignore  README.md  pyproject.toml  requirement.txt  requirements.txt
cartrackProject/: db.sqlite3  detect_and_track.py  manage.py  sort.py
cartrackProject/arial-car-track/: detect.py  detect_and_track.py
cartrackProject/arial-car-track/loop/: loop1clockwise.json  loop1counterclockwise.json
cartrackProject/arial-car-track/utils/: datasets.py
cartrackProject/cartrackProject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
cartrackProject/media/result/counting/: 6_RrirbJQ.txt
cartrackProject/sample_videos/videos_tracking/loop1clockwise/: loop.txt
cartrackProject/sample_videos/videos_tracking/loop1counterclockwise/: loop.txt
cartrackProject/static/object_tracking/: loop.txt
cartrackProject/static/object_tracking4/: loop.txt
cartrackProject/static/object_tracking7/: loop.txt
cartrackProject/static/temmain/css/: bootstrap.min.css  style.css
cartrackProject/static/temsignup/css/: style.css
cartrackProject/tasks/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
cartrackProject/tasks/migrations/: 0001_initial.py  0002_loopwrapper.py  0003_rename_trackingvideo_loop_trackingvideo_and_more.py  0004_loop_originalvideo.py
cartrackProject/tasks/templates/loop/: EditLoop.html  LoopDashboard.html  NewLoop.html
cartrackProject/tasks/templates/tasks/: counting_result_file.html  setLoop copy.html  setLoop.html  (+5 more)
cartrackProject/users/: forms.py  urls.py  views.py
cartrackProject/users/migrations/: 0001_initial.py  0002_delete_profile.py
(+7 files in other folders)
