[tool.poetry]
name = "cn332-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cn332_project"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0.72"
pillow = "^9.5.0"
pyyaml = "^6.0"
requests = "^2.28.2"
scipy = ">=1.8,<1.9.2"
torch = "^2.0.0"
torchvision = "^0.15.1"
tqdm = "^4.65.0"
filterpy = "^1.4.5"
scikit-image = "^0.20.0"
pandas = "^2.0.0"
seaborn = "^0.12.2"
django = "^4.2"
celery = "^5.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
